src/test/examples/custom/invalid/semanticErr/class/wrongArgsForPublicClassFunction.wacc
# Wrong arguments for public class function

begin
  class H is 
    public int v
    public int J(int z) is 
      return 0
    end
    public int f() is 
       v = 3 ;
       return v
    end
  end
  int f() is 
    return 0
  end
  H v = new H(2) ; 
  int k = call v.J(true) 
end